# gregor

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  LICENSE.txt  README.md  aggregation.ipynb  download.py  environment.yaml  example.py  mkdocs.yml  plot_raster_vector.ipynb  pyproject.toml  spatial_aggregation.py  test.py  try_reproject_raster.ipynb
.github/workflows/: ci-tests.yaml  publish-pypi.yaml  publish-test-pypi.yaml
docs/: Changelog.md  api.md  index.md
docs/API/: aggregate.md  disaggregate.md  plot.md  raster.md
docs/examples/: aggregate.py  cli.md  cli.sh  disaggregate-guided-to-raster.py  disaggregate-to-point.py  disaggregate-to-points.py  disaggregate-to-raster.py  disaggregate.py  get-uniform-proxy.py
docs/examples/data/: boundaries_NUTS0.geojson  boundaries_NUTS3.geojson  cities.geojson  demand.csv  demand.geojson  population_small.tif
example/: Snakefile  environment.yaml  example.py
example/config/: default.yaml
example/notebooks/: aggregation.ipynb  plot_raster_vector.ipynb  try_reproject_raster.ipynb
requirements/: base.txt  dev.txt
src/gregor/: __init__.py  aggregate.py  cli.py  disaggregate.py  plot.py  raster.py  timeseries.py
src/spatial_disaggregation/: __init__.py  aggregate.py  disaggregate.py  spatial_aggregation.py
test/: fixtures.py  test.py  test_aggregate.py  test_belongs_to.py  test_disaggregate.py
test/_files/: create_test_data.py  points.geojson  raster.tif  segmentation_2x2.geojson  segmentation_3x3.geojson  segmentation_polygon.geojson
