[project]
name = "gregor"
authors = [
  {name = "Jann Launer", email = "j.a.c.launer@tudelft.nl"},
]
description = "A library for spatial aggregation and disaggregation"
version = "0.0.1"
dynamic = ["readme"]

# complete classifier list:
# http://pypi.org/classifiers/
classifiers = [
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
]

keywords = [
  'gis',
]

dependencies = [
  # https://stackoverflow.com/questions/14399534
  'pandas>=1.2',
  'numpy',
  'matplotlib',
  'geopandas',
  'xarray',
  'rasterio',
  'rioxarray',
  'rasterstats',
]
requires-python = ">=3.8, <4"

[project.urls]
changelog = "https://github.com/jnnr/gregor/blob/main/CHANGELOG.rst"
homepage = "https://github.com/jnnr/gregor"
repository = "https://github.com/jnnr/gregor.git"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=6.2"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.black]
exclude = '''
/(
    \
  |
    \.eggs
  | \.git
  | \.mypy_cache
  | meta/migrations
  | docs
  | .venv
)/
'''
max-line-length=100

[tool.isort]
profile = "black"
